--- a/application/admin/view/homework/homework_list.html
+++ b/application/admin/view/homework/homework_list.html
@@ -61,10 +61,9 @@
                 , shade: 0.01
             });
             let contest_id = data.elem.id;
-            console.log(contest_id);
             let defunct = this.checked ? 'N' : 'Y';
             $.post('/admin/contest/change_defunct_json',{'contest_id': contest_id, 'defunct': defunct}, function(d){
-                if ('success' == d.status) {
+                if ('success' === d.status) {
                     setTimeout(function(){
                         layer.closeAll();
                         table.reload('homework_list');
@@ -83,8 +82,7 @@
             , shade: 0.01
         });
         $.post('/admin/contest/set_contest_type_json', {'contest_id': contest_id, 'type': 0}, function(d){
-            console.log(d);
-            if ('success' == d.status) {
+            if ('success' === d.status) {
                 setTimeout(function(){
                     layer.closeAll();
                     table.reload('homework_list');
