--- a/application/home/view/themes/bootstrap/problem.html
+++ b/application/home/view/themes/bootstrap/problem.html
@@ -224,12 +224,10 @@ function login(){
 
 function status_monitor(solution_id){
     $.get('/api/Solution/status?solution_id='+solution_id,function(d){
-        console.log(d);
         if (d.data.result < 4) {
 			$('#solution-result').html('<span class="'+d.data.result_code+'">'+d.data.result_text+'</span>');
             setTimeout(status_monitor(solution_id),300);
 		}else{
-        	console.log(d.data.result_code);
             $('#solution-result').html('<span class="'+d.data.result_code+'">' + d.data.result_text + '</span>');
             // $('#solution-result').css('color', solution_result_color[d.data.result_code]);
             $('#solution-memory').html(d.data.memory+' B');
@@ -290,8 +288,7 @@ function submit_code(){
 
 // 源代码语言切换
 function language_change(){
-    var lang_val = document.getElementById('submit-language').value;
-    console.log(lang_val);
+    let lang_val = document.getElementById('submit-language').value;
     localStorage.setItem("lang_val", lang_val);
 }
 
