--- a/application/home/view/themes/bootstrap/change-password.html
+++ b/application/home/view/themes/bootstrap/change-password.html
@@ -11,13 +11,15 @@
                 <div class="form-group">
                     <label class="col-sm-4 control-label">{$lang.password}</label>
                     <div class="col-sm-8">
-                        <input type="password" class="form-control" name="password" placeholder="{$lang.please_input_password}">
+                        <input type="password" class="form-control" name="password"
+                               placeholder="{$lang.please_input_password}">
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-4 control-label">{$lang.password_again}</label>
                     <div class="col-sm-8">
-                        <input type="password" class="form-control" name="password_again" placeholder="{$lang.please_input_password_again}">
+                        <input type="password" class="form-control" name="password_again"
+                               placeholder="{$lang.please_input_password_again}">
                     </div>
                 </div>
                 <div class="form-group">
@@ -32,21 +34,19 @@
 </div>
 
 <script type="text/javascript">
-$('#resetPasswordForm').on('submit',function(){
-    layer.load();
-    console.log($('#resetPasswordForm').serialize());
-    $.post('/api/User/change_password',$('#resetPasswordForm').serialize(),function(d){
-        console.log(d);
-        layer.closeAll('loading');
-        if ('success' == d.status) {
-            layer.alert('password changed',function(){
-                location.href = '/';
-            });
-        }else{
-            layer.alert(d.msg);
-        }
-    },'json');
-    return false;
-});
+    $('#resetPasswordForm').on('submit', function () {
+        layer.load();
+        $.post('/api/User/change_password', $('#resetPasswordForm').serialize(), function (d) {
+            layer.closeAll('loading');
+            if ('success' === d.status) {
+                layer.alert('password changed', function () {
+                    location.href = '/';
+                });
+            } else {
+                layer.alert(d.msg);
+            }
+        }, 'json');
+        return false;
+    });
 </script>
 {/block}
