feat: .env 设置 site_name

--- a/application/admin/view/layout/admin_common.html
+++ b/application/admin/view/layout/admin_common.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="shortcut icon" href="/favicon.gif" type="image/x-icon" />
-    <title>{if $is_root}{$lang.root}{else}{$lang.administrator}{/if} - {$lang['justoj']}</title>
+    <title>{if $is_root}{$lang.root}{else}{$lang.administrator}{/if}</title>
 
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0">
 
@@ -81,7 +81,7 @@
 {block name='body'}
 <div class="container">
     <div class="jumbotron">
-        <h2>Welcome to JustOJ administrator system.</h2>
+        <h2>Welcome to {$site_name} administrator system.</h2>
     </div>
 </div>
 {/block}
