--- a/application/contest/view/contest-rank.html
+++ b/application/contest/view/contest-rank.html
@@ -1,5 +1,5 @@
 {extend name="common/contest-layout" /}
-{block name='title_block'}{$lang['rank']} - {$lang['justoj']}{/block}
+{block name='title_block'}{$lang['rank']}{/block}
 {block name='body'}
 <style media="screen">
 	.table > thead > tr > th,
