--- a/application/contest/view/contest-status.html
+++ b/application/contest/view/contest-status.html
@@ -1,5 +1,5 @@
 {extend name="common/contest-layout" /}
-{block name='title_block'}{$lang['status']} - {$lang['justoj']}{/block}
+{block name='title_block'}{$lang['status']}{/block}
 {block name='body'}
 <div class="container">
 	<form class="form-horizontal" action="/contests/{$contest->contest_id}/status" method="get">
