--- a/application/contest/view/contest.html
+++ b/application/contest/view/contest.html
@@ -1,5 +1,5 @@
 {extend name="common/contest-layout" /}
-{block name='title_block'}{$contest->title} - {$lang['justoj']}{/block}
+{block name='title_block'}{$contest->title}{/block}
 {block name='body'}
 <div class="container">
     <div class="jumbotron" style="margin-bottom: 10px; padding-top: 30px; padding-bottom: 30px">
