--- a/application/home/view/themes/bootstrap/index.html
+++ b/application/home/view/themes/bootstrap/index.html
@@ -1,4 +1,5 @@
 {extend name="home@themes/bootstrap/layout/user" /}
+{block name='title_block'}{$lang['welcome_to_justoj']}{/block}
 {block name="body"}
 <div class="container">
 
