--- a/application/home/view/themes/bootstrap/problems.html
+++ b/application/home/view/themes/bootstrap/problems.html
@@ -1,5 +1,5 @@
 {extend name="home@themes/bootstrap/layout/user" /}
-{block name='title_block'}{$lang['problem']} - {$lang['justoj']}{/block}
+{block name='title_block'}{$lang['problem']}{/block}
 {block name="body"}
 <div class="container">
 	<div class="row">
