--- a/application/home/view/themes/bootstrap/contests.html
+++ b/application/home/view/themes/bootstrap/contests.html
@@ -1,5 +1,5 @@
 {extend name="home@themes/bootstrap/layout/user" /}
-{block name='title_block'}{$title_val} - {$lang['justoj']}{/block}
+{block name='title_block'}{$title_val}{/block}
 {block name="body"}
 <?php
 $code_arr = array(
