--- a/application/home/view/themes/bootstrap/login.html
+++ b/application/home/view/themes/bootstrap/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{$lang['login']} - {$lang['justoj']}</title>
+    <title>{$lang['login']}</title>
     <meta name="renderer" content="webkit|ie-comp|ie-stand">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport"
