--- a/application/home/view/themes/bootstrap/problem.html
+++ b/application/home/view/themes/bootstrap/problem.html
@@ -1,5 +1,5 @@
 {extend name="home@themes/bootstrap/layout/user" /}
-{block name='title_block'}{$problem->problem_id} - {$problem->title} - {$lang['justoj']}{/block}
+{block name='title_block'}{$problem->problem_id} - {$problem->title}{/block}
 {block name="body"}
 <script type="text/x-mathjax-config">
 		MathJax.Hub.Config({
