--- a/application/home/view/themes/bootstrap/profile.html
+++ b/application/home/view/themes/bootstrap/profile.html
@@ -1,5 +1,5 @@
 {extend name="home@themes/bootstrap/layout/user" /}
-{block name='title_block'}{$lang['personal_information']} - {$lang['justoj']}{/block}
+{block name='title_block'}{$lang['personal_information']}{/block}
 {block name="body"}
 <div class="container">
 	<div class="panel panel-primary" style="width: 573px;margin: auto;">
