--- a/application/home/view/themes/bootstrap/profile_change_email.html
+++ b/application/home/view/themes/bootstrap/profile_change_email.html
@@ -1,5 +1,5 @@
 {extend name="home@themes/bootstrap/layout/user" /}
-{block name='title_block'}{$lang['personal_information']} - {$lang['justoj']}{/block}
+{block name='title_block'}{$lang['personal_information']}{/block}
 {block name="body"}
 <div class="container">
     <p>
