--- a/application/home/view/themes/bootstrap/register.html
+++ b/application/home/view/themes/bootstrap/register.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{$lang['register']} - {$lang['justoj']}</title>
+    <title>{$lang['register']}</title>
     <meta name="renderer" content="webkit|ie-comp|ie-stand">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
