--- a/application/home/view/themes/bootstrap/status.html
+++ b/application/home/view/themes/bootstrap/status.html
@@ -87,7 +87,7 @@
 			<td width="10%">{$solution->time} ms</td>
 			<td width="10%">
 				{if $is_administrator || ($login_user && $solution->user_id == $login_user->user_id)}
-				<a href="javascript:;" onclick="show_solution({$solution->solution_id})">{$solution->language_text}</a>
+				<a target="_blank" href="/solutions/{$solution->solution_id}">{$solution->language_text}</a>
 				{else}
 				{$solution->language_text}
 				{/if}
@@ -100,88 +100,6 @@
 	</table>
 	{$solutions->render()}
 </div>
-
-
-<!--显示代码之模态框 begin-->
-<div class="modal fade" id="solutionModal" tabindex="-1" role="dialog" aria-hidden="true">
-	<div class="modal-dialog modal-lg" role="document">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal">
-					<a href="javascript:void(0)">
-						<i class="fa fa-close"></i>
-					</a>
-				</button>
-				<h5 class="modal-title" id="solutionModalLabel"><a id="solution-link" href="javascript:" target="_blank">#<span id="solution_id"></span></a>
-				</h5>
-			</div>
-			<div class="modal-body">
-				<div id="info-panel">
-					<table class="table table-reflow">
-						<thead>
-						<tr>
-							<th>{$lang.run_id}</th>
-							<th>{$lang.status}</th>
-							<th>{$lang.code_length}</th>
-							<th>{$lang.memory}</th>
-							<th>{$lang.exe_time}</th>
-							<th>{$lang.language}</th>
-							<th>{$lang.submit_time}</th>
-						</tr>
-						</thead>
-						<tbody>
-						<tr>
-							<td><span id="solution_id_2"></span></td>
-							<td><span id="solution-result"></span></td>
-							<td id="solution-code-length"></td>
-							<td id="solution-memory"></td>
-							<td id="solution-exe-time"></td>
-							<td id="solution-code-language"></td>
-							<td id="solution-submittime"></td>
-						</tr>
-						</tbody>
-					</table>
-				</div>
-				<div id="code-panel">
-					<pre id="solution-source-code" style="padding: 0px;tab-size: 4"></pre>
-				</div>
-				<div id="compile-info-panel" hidden>
-					<pre id="solution-compile-error" style="padding: 0px;tab-size: 4"></pre>
-				</div>
-				<div class="alert alert-warning" role="alert" id="ce-info" style="display: none"></div>
-			</div>
-		</div>
-	</div>
-</div>
-<!--显示代码之模态框 end-->
-
-<script type="text/javascript">
-    function show_solution(id) {
-        $.get('/api/Solution/details?id=' + id, function (d) {
-            $('#solution_id').html(id);
-            $('#solution-link').attr('href', '/status/solution/show/solution_id/' + id);
-            $('#solution_id_2').html(id);
-            $('#solution-result').html(d.data.result_text);
-            $('#solution-code-length').html(d.data.code_length + ' B');
-            $('#solution-memory').html(d.data.memory + ' B');
-            $('#solution-exe-time').html(d.data.time + ' ms');
-            $('#solution-code-language').html(d.data.language_text);
-            $('#solution-submittime').html(d.data.in_date);
-            $('#solution-source-code').html('<code class="'+d.data.language_text+'">'+d.data.source_code.source+'</code>');
-            /* 如果是编译错误还要显示编译错误信息 */
-            if ('11' === d.data.result) {
-                $('#solution-compile-error').html('<code class="bash">'+d.data.compile_info.error+'</code>');
-                $('#compile-info-panel').show();
-            }
-
-            $('pre code').each(function(i, block) {
-                hljs.highlightBlock(block);
-            });
-
-            $('#solutionModal').modal('show');
-        }, 'json');
-    }
-</script>
 
 <link href="https://cdn.bootcss.com/highlight.js/9.15.10/styles/atom-one-light.min.css" rel="stylesheet">
 <script src="https://cdn.bootcss.com/highlight.js/9.15.10/highlight.min.js"></script>
