--- a/application/group/view/common/group-layout.html
+++ b/application/group/view/common/group-layout.html
@@ -14,14 +14,65 @@
 		</div>
 		<div class="collapse navbar-collapse" id="example-navbar-collapse">
 			<ul class="nav navbar-nav">
-				<li{if 'notifications' == $nav} class="active"{/if}><a href="/groups/{$group->id}/notifications">{$lang.notifications}</a></li>
-				<li{if 'members' == $nav} class="active"{/if}><a href="/groups/{$group->id}/members">{$lang.members}</a></li>
-				<li{if 'tasks' == $nav} class="active"{/if}><a href="/groups/{$group->id}/tasks">{$lang.tasks}</a></li>
+				<li id="li-notifications"><a href="/groups/{$group->id}/notifications">{$lang.notifications}</a></li>
+				<li id="li-members"><a href="/groups/{$group->id}/members">{$lang.members}</a></li>
+				<li id="li-tasks"><a href="/groups/{$group->id}/tasks">{$lang.tasks}</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
+				<li class="dropdown">
+					<a href="javascript:" class="dropdown-toggle" data-toggle="dropdown">
+						<span class="glyphicon glyphicon-menu-hamburger"></span> 管理
+						<b class="caret"></b>
+					</a>
+					<ul class="dropdown-menu">
+						<li><a href="javascript:" onclick="open_setting();"><span class="glyphicon glyphicon-cog"></span> 设置</a></li>
+						<li class="divider"></li>
+						<li><a href="javascript:" onclick="delete_group();"><span class="glyphicon glyphicon-trash"></span> 删除班级</a></li>
+					</ul>
+				</li>
+
 				<li><a class="" href="/"><span class="glyphicon glyphicon-home"></span> {$lang.back_to_home}</a></li>
 			</ul>
 		</div>
 	</div>
 </nav>
+
+<script type="text/javascript">
+	$(function () {
+		let nav = "{$nav}";
+		if (nav === 'notifications') {
+			$('#li-notifications').addClass('active');
+		}
+		if (nav === 'members') {
+			$('#li-members').addClass('active');
+		}
+		if (nav === 'tasks') {
+			$('#li-tasks').addClass('active');
+		}
+	});
+</script>
+
+<script type="text/javascript">
+	function open_setting() {
+		layer.alert("Pending...");
+	}
+</script>
+
+<script type="text/javascript">
+	function delete_group(){
+		let group_id = "{$group->id}";
+		let group_name = "{$group->name}";
+		layer.confirm('确定删除此班级？[' + group_name + ']', function(){
+			$.post('/admin/group/delete_json',{'group_id':group_id},function(d){
+				layer.closeAll();
+				if ('success' === d.status) {
+					location.href = "/groups";
+				}else{
+					layer.alert(d.msg);
+				}
+			},'json');
+		});
+	}
+</script>
+
 {/block}
