--- a/application/admin/view/layout/admin_common.html
+++ b/application/admin/view/layout/admin_common.html
@@ -7,20 +7,8 @@
 
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0">
 
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-    <!--引入layer.js文件 begin-->
-    <!--<script src="/static/layer/layer.js"></script>-->
-    <script src="https://cdn.jsdelivr.net/gh/bootcdn/BootCDN/ajax/libs/layer/3.1.0/layer.js"></script>
-    <!--引入layer.js文件 end-->
+    {include file="common@snippets/bootstrap"}
+    {include file="common@snippets/layer"}
 
     <style>
         .navbar {
