--- a/application/admin/view/news/edit.html
+++ b/application/admin/view/news/edit.html
@@ -1,8 +1,7 @@
 {extend name="base" /}
 {block name="content"}
-<!--引入layer.js文件 begin-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor/4.9.2/ckeditor.js"></script>
 
+{include file="common@snippets/ckeditor"}
 
 <div class="x-body">
 	<form class="layui-form" id="newsEditForm">
