--- a/application/group/view/group-notifications.html
+++ b/application/group/view/group-notifications.html
@@ -1,7 +1,8 @@
 {extend name="common/group-layout" /}
 {block name='title_block'}{$lang.notifications} - {$group->name}{/block}
 {block name='body'}
-<script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor/4.9.2/ckeditor.js"></script>
+
+{include file="common@snippets/ckeditor"}
 
 <div class="container">
 	{if $is_group_manager}
