--- a/application/home/view/themes/bootstrap/login.html
+++ b/application/home/view/themes/bootstrap/login.html
@@ -10,11 +10,7 @@
     <meta http-equiv="Cache-Control" content="no-siteapp"/>
 
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
-    <link rel="stylesheet" href="/static/css/font.css">
-    <link rel="stylesheet" href="/static/css/xadmin.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="/static/lib/layui/layui.js" charset="utf-8"></script>
-    <script type="text/javascript" src="/static/js/xadmin.js"></script>
+    {include file="common@snippets/xadmin"}
 </head>
 <body class="login-bg">
 
