--- a/application/home/view/themes/bootstrap/register.html
+++ b/application/home/view/themes/bootstrap/register.html
@@ -7,18 +7,10 @@
     <meta name="renderer" content="webkit|ie-comp|ie-stand">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
-    <meta http-equiv="Cache-Control" content="no-siteapp" />
+    <meta content="no-siteapp" http-equiv="Cache-Control"/>
 
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="/static/css/font.css">
-    <link rel="stylesheet" href="/static/css/xadmin.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="/static/lib/layui/layui.js" charset="utf-8"></script>
-    <script type="text/javascript" src="/static/js/xadmin.js"></script>
-
-    <link rel="stylesheet" href="/static/YiUI/Yi.css">
-    <script type="text/javascript" src="/static/YiUI/Yi.js"></script>
-
+    {include file="common@snippets/xadmin"}
 </head>
 <body class="login-bg">
 <div class="login layui-anim">
