--- a/public/static/xadmin/css/xadmin.css
+++ b/public/static/xadmin/css/xadmin.css
@@ -19,13 +19,12 @@ body{
     min-height: 100%;
 }
 .login-bg{
-    /*background: #eeeeee url() 0 0 no-repeat;*/
      background:url(../images/bg.png) no-repeat center;
     background-size: cover;
     overflow: hidden;
 }
 .login{
-    margin: 120px auto 0 auto;
+    margin: 60px auto 0 auto;
     min-height: 420px;
     max-width: 420px;
     padding: 40px;
@@ -101,7 +100,7 @@ body{
     width:100%;
 }
 .login hr {
-    background: #fff url() 0 0 no-repeat;
+    background: #fff;
 }
 .login hr.hr15 {
     height: 15px;
@@ -142,8 +141,6 @@ xblock{
   float: right;
 }
 .x-so{
-    /*text-align: center;*/
-    /*background: #f2f2f2 url() 0 0 no-repeat;*/
     margin-bottom: 20px;
 }
 .x-so input.layui-input{
@@ -184,7 +181,7 @@ xblock{
 }
 .page a{
     display: inline-block;
-    background: #fff url() 0 0 no-repeat;
+    background: #fff;
     color: #888;
     padding: 10px;
     min-width: 15px;
@@ -199,7 +196,7 @@ xblock{
 }
 .page span.current{
     display: inline-block;
-    background: #009688 url() 0 0 no-repeat;
+    background: #009688;
     color: #fff;
     padding: 10px;
     min-width: 15px;
@@ -211,7 +208,7 @@ xblock{
     text-align: center;
 }
 .page .pagination li.active span{
-    background: #009688 url() 0 0 no-repeat;
+    background: #009688;
     color: #fff;
     border: 1px solid #009688;
 
@@ -244,7 +241,7 @@ xblock{
 }
 .container .left_open i{
     display: block;
-    background: rgba(255,255,255,0.1) url() 0 0 no-repeat;
+    background: rgba(255,255,255,0.1);
     color: #fff;
     width: 32px;
     height: 32px;
@@ -255,7 +252,7 @@ xblock{
     cursor: pointer;
 }
 .container .left_open i:hover{
-    background: rgba(255,255,255,0.3) url() 0 0 no-repeat;
+    background: rgba(255,255,255,0.3);
 }
 
 .container .left{
@@ -325,14 +322,11 @@ xblock{
     display: block;
 }
 .left-nav #nav li .opened:hover{
-    /*background: #fff url() 0 0 no-repeat;*/
 }
 .left-nav #nav li .opened .current{
     
 }
 .left-nav #nav li .sub-menu li:hover{
-    /*color: blue;*/
-     /*background: #fff url() 0 0 no-repeat;*/
 }
 .left-nav #nav li .sub-menu li a{
     padding: 12px 15px 12px 30px;
@@ -359,7 +353,6 @@ xblock{
 .x-slide_left {
     width: 17px;
     height: 61px;
-    background: url(../images/icon.png) 0 0 no-repeat;
     position: absolute;
     top: 200px;
     left: 221px;
@@ -381,7 +374,7 @@ xblock{
     right: 0;
     bottom: 42px;
     left: 221px;
-    background: rgba(0,0,0,0.5); url() 0 0 no-repeat;
+    background: rgba(0,0,0,0.5);
     overflow: hidden;
     z-index: 100;
     display: none;
@@ -390,13 +383,13 @@ xblock{
 .page-content .tab{
     height: 100%;
     width: 100%;
-    background: #EFEEF0 url() 0 0 no-repeat;
+    background: #EFEEF0;
     margin: 0px;
 }
 .page-content .layui-tab-title{
     /*padding-top: 5px;*/
     height: 35px;
-    background: #EFEEF0 url() 0 0 no-repeat;
+    background: #EFEEF0;
     position: relative;
     z-index: 100;
 }
@@ -416,7 +409,7 @@ xblock{
     border-radius: 50%;
 }
 .page-content .layui-tab-title .layui-this{
-    background: #fff url() 0 0 no-repeat;
+    background: #fff;
 }
 .page-content .layui-tab-bar{
     height:34px;
@@ -427,7 +420,7 @@ xblock{
     top: 36px;
     bottom: 0px;
     width: 100%;
-    background: #fff url() 0 0 no-repeat;
+    background: #fff;
     padding: 0px;
     overflow: hidden;
 }
