--- a/application/admin/view/base.html
+++ b/application/admin/view/base.html
@@ -7,56 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=1.0"/>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
-    <link rel="stylesheet" href="/static/xadmin/css/font.css">
-    <link rel="stylesheet" href="/static/xadmin/css/xadmin.css">
-    <script src="/static/laydate/laydate.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="/static/xadmin/lib/layui/layui.js" charset="utf-8"></script>
-    <script type="text/javascript" src="/static/xadmin/js/xadmin.js"></script>
-    <style type="text/css">
-        .greetings{
-            position: absolute;
-            height: auto;
-            border-left: 1px solid rgba(0, 0, 0, 0.11);
-            border-right: 1px solid rgba(0, 0, 0, 0.11);
-            left: 0px;
-            z-index:5555;
-        }
-        .greetings ul{
-            list-style: none;
-            box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.44);
-            -webkit-margin-before: 0em;
-            -webkit-margin-after: 0em;
-            -webkit-margin-start: 0px;
-            -webkit-margin-end: 0px;
-            -webkit-padding-start: 0px;
-        }
-        .greetings li{
-            text-align: left;
-            padding: 5px;
-            font-family: inherit;
-            border-bottom: 1px solid rgba(0, 0, 0, 0.16);
-            height: 25px;
-            width: 1080px;
-            line-height: 25px;
-            background-color: rgba(255, 255, 255, 1);
-            cursor: pointer;
-        }
-        .greetings li:hover{
-            background-color: rgba(175, 42, 0, 1);
-            color: white;
-        }
-        #tianjiaky1{
-            position: absolute;
-            width: 132px;
-            left: 0px;
-            z-index:5555;
-        }
-        .layui-form-checkbox span {
-            font-size: 15px;
-            color: black !important;
-        }
-    </style>
+
+    {include file="common@snippets/xadmin"}
+
 </head>
 {block name='body'}
 <body>
