--- a/application/contest/view/contest-status.html
+++ b/application/contest/view/contest-status.html
@@ -180,6 +180,6 @@
     }
 </script>
 
-<link href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/atom-one-light.min.css" rel="stylesheet">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
+{include file="common@snippets/highlight"}
+
 {/block}
