--- a/application/hack/view/index/user_list.html
+++ b/application/hack/view/index/user_list.html
@@ -7,11 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=1.0"/>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
-    <link rel="stylesheet" href="/static/xadmin/css/font.css">
-    <link rel="stylesheet" href="/static/xadmin/css/xadmin.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="/static/xadmin/lib/layui/layui.js" charset="utf-8"></script>
-    <script type="text/javascript" src="/static/xadmin/js/xadmin.js"></script>
+    {include file="common@snippets/xadmin"}
 </head>
 <body>
 
