--- a/application/home/view/themes/bootstrap/layout/common.html
+++ b/application/home/view/themes/bootstrap/layout/common.html
@@ -1,113 +1,102 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<meta name="description" content="JustOJ、江西理工大学在线测评系统、在线编程平台、只为提高你的编程水平。">
-	<meta name="keywords" content="ACM-ICPC,Online Judge,编程,C语言,C++,Java,Python,ACMer,JustOJ">
-	<link rel="shortcut icon" href="/favicon.gif" type="image/x-icon" />
-	<title>{block name='title_full_block'}{block name='title_block'}{$site_name}{/block} - {$site_name}{/block}</title>
-	<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="description" content="JustOJ、江西理工大学在线测评系统、在线编程平台、只为提高你的编程水平。">
+    <meta name="keywords" content="ACM-ICPC,Online Judge,编程,C语言,C++,Java,Python,ACMer,JustOJ">
+    <link rel="shortcut icon" href="/favicon.gif" type="image/x-icon"/>
+    <title>{block name='title_full_block'}{block name='title_block'}{$site_name}{/block} - {$site_name}{/block}</title>
+    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0">
 
-	<link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-	<link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    {include file="common@snippets/font-awesome"}
+    {include file="common@snippets/bootstrap"}
+    {include file="common@snippets/layer"}
 
-	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-	<!--[if lt IE 9]>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.0/html5shiv.js"></script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
-	<![endif]-->
+    <style>
+        .navbar {
+            border-radius: 0px;
+        }
 
-	<!--引入layer.js文件 begin-->
-	<script src="//cdnjs.cloudflare.com/ajax/libs/layer/2.3/layer.js"></script>
-	<!--引入layer.js文件 end-->
+        pre {
+            border-radius: 0px;
+        }
 
-	<style>
-		.navbar {
-			border-radius: 0px;
-		}
-		pre {
-			border-radius: 0px;
-		}
-		/*.btn {*/
-			/*border-radius: 0px;*/
-		/*}*/
-	</style>
+        /*.btn {*/
+        /*border-radius: 0px;*/
+        /*}*/
+    </style>
 
-	<style>
-		.result_code_pending{color: black;}
-		.result_code_rejuding {color: black;}
-		.result_code_compiling {color: black;}
-		.result_code_running {color: black;}
-		.result_code_ac {color: green;}
-		.result_code_pe {color: black;}
-		.result_code_wa {color: red;}
-		.result_code_tle {color: red;}
-		.result_code_mle {color: red;}
-		.result_code_ole {color: red;}
-		.result_code_re {color: red;}
-		.result_code_ce {color: red;}
-		.result_code_co {color: black;}
-		.result_code_tr {color: black;}
-		.result_code_so {color: black;}
-	</style>
+    {include file="common@snippets/solution_result"}
+
 </head>
 <body>
 {if true == $need_edit_profile}
-<div style="padding:6px 0;text-align:center;background:#f8eca6;color:#847108;display:none;min-width:1020px;display: block;">温馨提示：请前往 <a href="/profile/editmyprofile">完善个人信息</a> 。</div>
+<div style="padding:6px 0;text-align:center;background:#f8eca6;color:#847108;display:none;min-width:1020px;display: block;">
+    温馨提示：请前往 <a href="/profile/editmyprofile">完善个人信息</a> 。
+</div>
 {/if}
 
 {if $show_browser_banner}
 <p style="margin: 10px;font-size:16px;">
-	为了获得更好的浏览体验，我们强烈建议您升级到最新版本的IE浏览器，或者使用较新版本的
-	<a href="https://www.google.cn/chrome" target="_blank" style="font-weight:bold;">Google Chrome</a>、
-	<a href="https://www.mozilla.org/zh-CN/firefox/" target="_blank" style="font-weight:bold;">Firefox</a> 等。
-	如果您是使用的是Windows XP操作系统，我们建议您下载
-	<a href="/upload/ismdeep/20180414/Firefox-ESR-full-latest.exe">FireFox浏览器</a>。</p>
+    为了获得更好的浏览体验，我们强烈建议您升级到最新版本的IE浏览器，或者使用较新版本的
+    <a href="https://www.google.cn/chrome" target="_blank" style="font-weight:bold;">Google Chrome</a>、
+    <a href="https://www.mozilla.org/zh-CN/firefox/" target="_blank" style="font-weight:bold;">Firefox</a> 等。
+    如果您是使用的是Windows XP操作系统，我们建议您下载
+    <a href="/upload/ismdeep/20180414/Firefox-ESR-full-latest.exe">FireFox浏览器</a>。</p>
 {/if}
 
 {block name="nav_block"}
 <nav class="navbar navbar-default" role="navigation">
-	<div class="container-fluid">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle" data-toggle="collapse"
-					data-target="#example-navbar-collapse">
-				<span class="sr-only"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
-			<a class="navbar-brand" href="/">{$site_name}</a>
-		</div>
-		<div class="collapse navbar-collapse" id="example-navbar-collapse">
-			<ul class="nav navbar-nav">
-				<li{if $nav == 'problem'} class="active"{/if}><a href="/problems">{$lang.problem}</a></li>
-				<li{if $nav == 'status'} class="active"{/if}><a href="/status">{$lang.status}</a></li>
-				<li{if $nav == 'rank'} class="active"{/if}><a href="/rank">{$lang.rank}</a></li>
-				<li{if $nav == 'groups'} class="active"{/if}><a href="/groups">{$lang.group}</a></li>
-				<li{if $nav == 'contests'} class="active"{/if}><a href="/contests">{$lang.contest}</a></li>
-				<li{if $nav == 'paste'} class="active"{/if}><a href="/paste">{$lang.paste_code}</a></li>
-			</ul>
-			<ul class="nav navbar-nav navbar-right">
-				{if isset($login_user)}
-				{if $is_administrator}
-				<li><a class="" href="/admin"><span class="glyphicon glyphicon-cog"></span> {$lang.admin_system}</a></li>
-				{/if}
-				<li><a class="" href="/profile"><span class="glyphicon glyphicon-user"></span>
-					{$login_user->user_id}
-					{if $login_user->email_verified != 1}
-					<span class="badge">1</span>
-					{/if}
-				</a></li>
-				<li><a class="" onclick="logout();" href="/logout?redirect=<?php echo urlencode($_SERVER['REQUEST_URI']);?>"><span class="glyphicon glyphicon-log-out"></span> {$lang.logout}</a></li>
-				{else}
-				<li><a class="" href="/register"><span class="glyphicon glyphicon-user"></span> {$lang.register}</a></li>
-				<li><a class="" href="/login?redirect=<?php echo urlencode($_SERVER['REQUEST_URI']);?>"><span class="glyphicon glyphicon-log-in"></span> {$lang.login}</a></li>
-				{/if}
-			</ul>
-		</div>
-	</div>
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse"
+                    data-target="#example-navbar-collapse">
+                <span class="sr-only"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">{$site_name}</a>
+        </div>
+        <div class="collapse navbar-collapse" id="example-navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li
+                {if $nav == 'problem'} class="active"{/if}><a href="/problems">{$lang.problem}</a></li>
+                <li
+                {if $nav == 'status'} class="active"{/if}><a href="/status">{$lang.status}</a></li>
+                <li
+                {if $nav == 'rank'} class="active"{/if}><a href="/rank">{$lang.rank}</a></li>
+                <li
+                {if $nav == 'groups'} class="active"{/if}><a href="/groups">{$lang.group}</a></li>
+                <li
+                {if $nav == 'contests'} class="active"{/if}><a href="/contests">{$lang.contest}</a></li>
+                <li
+                {if $nav == 'paste'} class="active"{/if}><a href="/paste">{$lang.paste_code}</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                {if isset($login_user)}
+                {if $is_administrator}
+                <li><a class="" href="/admin"><span class="glyphicon glyphicon-cog"></span> {$lang.admin_system}</a>
+                </li>
+                {/if}
+                <li><a class="" href="/profile"><span class="glyphicon glyphicon-user"></span>
+                    {$login_user->user_id}
+                    {if $login_user->email_verified != 1}
+                    <span class="badge">1</span>
+                    {/if}
+                </a></li>
+                <li><a class="" onclick="logout();"
+                       href="/logout?redirect=<?php echo urlencode($_SERVER['REQUEST_URI']);?>"><span
+                        class="glyphicon glyphicon-log-out"></span> {$lang.logout}</a></li>
+                {else}
+                <li><a class="" href="/register"><span class="glyphicon glyphicon-user"></span> {$lang.register}</a>
+                </li>
+                <li><a class="" href="/login?redirect=<?php echo urlencode($_SERVER['REQUEST_URI']);?>"><span
+                        class="glyphicon glyphicon-log-in"></span> {$lang.login}</a></li>
+                {/if}
+            </ul>
+        </div>
+    </div>
 </nav>
 {/block}
 
@@ -118,71 +107,82 @@
 
 {block name="footer"}
 <div style="text-align: center;margin-top:20px;margin-bottom: 20px;">
-	<hr>
-	&copy; 2019&nbsp;<a href="/">{$site_name}</a>&nbsp;&nbsp;&nbsp;&nbsp;
-	{include file="home@common_html/language_selector"}
-	|
-	<a id="email-address-a" href="mailto:{$admin_email}">{$admin_email}</a>
-<!--	|-->
-<!--	<a href="https://wiki.ismdeep.com/index.php?title=%E6%B1%9F%E8%A5%BF%E7%90%86%E5%B7%A5%E5%A4%A7%E5%AD%A6ACM-ICPC" target="_blank">JxustACM</a>-->
-	|
-	<a href="https://justoj.readthedocs.io" target="_blank">Docs</a>
-	|
-	<a href="https://t.me/justoj_group">Telegram Group</a>
-	|
-	<a href="https://t.me/justoj_official">Telegram Channel</a>
+    <hr>
+    &copy; 2019&nbsp;<a href="/">{$site_name}</a>&nbsp;&nbsp;&nbsp;&nbsp;
+    {include file="home@common_html/language_selector"}
+    |
+    <a id="email-address-a" href="mailto:{$admin_email}">{$admin_email}</a>
+    <!--	|-->
+    <!--	<a href="https://wiki.ismdeep.com/index.php?title=%E6%B1%9F%E8%A5%BF%E7%90%86%E5%B7%A5%E5%A4%A7%E5%AD%A6ACM-ICPC" target="_blank">JxustACM</a>-->
+    |
+    <a href="https://justoj.readthedocs.io" target="_blank">Docs</a>
+    |
+    <a href="https://t.me/justoj_group">Telegram Group</a>
+    |
+    <a href="https://t.me/justoj_official">Telegram Channel</a>
 </div>
 {/block}
 
 
 <script type="text/javascript">
-	$(function(){
-		if (localStorage.getItem('tip-already-know') == null) {
-			layer.open({
-				type: 1
-				, title: false //不显示标题栏
-				, closeBtn: false
-				, area: '300px;'
-				, shade: 0.8
-				, id: 'LAY_layuipro' //设定一个id，防止重复弹出
-				, resize: false
-				, btn: ['我知道了，不再提示。', '关闭']
-				, btnAlign: 'c'
-				, moveType: 1 //拖拽模式，0或者1
-				, content: '<div style="padding: 50px; line-height: 22px; background-color: #393D49; color: #fff; font-weight: 300;">您在访问本站时发现任何问题或想提出任何建议都可直接发送邮件至 {$admin_email} ，此邮件地址也会出现在网站底部。谢谢。</div>'
-				, yes: function() {
-					localStorage.setItem('tip-already-know', true);
-					layer.closeAll();
-				}
-			});
-		}
-	});
+    $(function () {
+        if (localStorage.getItem('tip-already-know') == null) {
+            layer.open({
+                type: 1
+                ,
+                title: false //不显示标题栏
+                ,
+                closeBtn: false
+                ,
+                area: '300px;'
+                ,
+                shade: 0.8
+                ,
+                id: 'LAY_layuipro' //设定一个id，防止重复弹出
+                ,
+                resize: false
+                ,
+                btn: ['我知道了，不再提示。', '关闭']
+                ,
+                btnAlign: 'c'
+                ,
+                moveType: 1 //拖拽模式，0或者1
+                ,
+                content: '<div style="padding: 50px; line-height: 22px; background-color: #393D49; color: #fff; font-weight: 300;">您在访问本站时发现任何问题或想提出任何建议都可直接发送邮件至 {$admin_email} ，此邮件地址也会出现在网站底部。谢谢。</div>'
+                ,
+                yes: function () {
+                    localStorage.setItem('tip-already-know', true);
+                    layer.closeAll();
+                }
+            });
+        }
+    });
 
-	function logout() {
-		localStorage.setItem('logout', "1");
-	}
+    function logout() {
+        localStorage.setItem('logout', "1");
+    }
 </script>
 
 {if !isset($login_user)}
 <script type="text/javascript">
-	$(function () {
-		if (localStorage.getItem('username') && localStorage.getItem('logout') != "1") {
-			let username = localStorage.getItem('username');
-			let password = localStorage.getItem('password');
-			let loginData = {
-				'username': username,
-				'password': password
-			};
-			$.post('/api/login/login',loginData,function(d){
-				if ('success' === d.status) {
-					location.reload();
-				}else{
-					localStorage.removeItem('username');
-					localStorage.removeItem('password');
-				}
-			});
-		}
-	});
+    $(function () {
+        if (localStorage.getItem('username') && localStorage.getItem('logout') !== "1") {
+            let username = localStorage.getItem('username');
+            let password = localStorage.getItem('password');
+            let loginData = {
+                'username': username,
+                'password': password
+            };
+            $.post('/api/login/login', loginData, function (d) {
+                if ('success' === d.status) {
+                    location.reload();
+                } else {
+                    localStorage.removeItem('username');
+                    localStorage.removeItem('password');
+                }
+            });
+        }
+    });
 </script>
 {/if}
 
