--- a/application/home/view/themes/bootstrap/paste-detail.html
+++ b/application/home/view/themes/bootstrap/paste-detail.html
@@ -5,14 +5,5 @@
     <pre id="solution-source-code" style="padding: 0px;tab-size: 4"><code class="{$paste->lang}">{$paste->code}</code></pre>
 </div>
 
-<script type="text/javascript">
-    $(function(){
-        $('pre code').each(function(i, block) {
-            hljs.highlightBlock(block);
-        });
-    });
-</script>
-
-<link href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/atom-one-light.min.css" rel="stylesheet">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
+{include file="common@snippets/highlight"}
 {/block}
