--- a/application/home/view/themes/bootstrap/status-solution.html
+++ b/application/home/view/themes/bootstrap/status-solution.html
@@ -51,23 +51,17 @@
 </div>
 
 
-<link href="https://cdn.bootcss.com/highlight.js/9.15.10/styles/atom-one-light.min.css" rel="stylesheet">
-<script src="https://cdn.bootcss.com/highlight.js/9.15.10/highlight.min.js"></script>
+{include file="common@snippets/highlight"}
 
 <script type="text/javascript">
-    $('pre code').each(function(i, block) {
-        hljs.highlightBlock(block);
-    });
-</script>
-
-<script type="text/javascript">
-    var solution_id = {$solution->solution_id};
+    let solution_id = "{$solution->solution_id}";
 </script>
 
 <script type="text/javascript">
     function manual_set_result() {
         let manual_result_val = $('#manual-result').val();
         $.post('/api/solution/manual_set_result', {'solution_id': solution_id, 'result': manual_result_val}, function(d){
+
         }, 'json')
     }
 </script>
