--- a/application/home/view/themes/bootstrap/status.html
+++ b/application/home/view/themes/bootstrap/status.html
@@ -101,9 +101,6 @@
 	{$solutions->render()}
 </div>
 
-<link href="https://cdn.bootcss.com/highlight.js/9.15.10/styles/atom-one-light.min.css" rel="stylesheet">
-<script src="https://cdn.bootcss.com/highlight.js/9.15.10/highlight.min.js"></script>
-
-
+{include file="common@snippets/highlight"}
 
 {/block}
