--- a/application/group/view/common/group-layout.html
+++ b/application/group/view/common/group-layout.html
@@ -19,6 +19,7 @@
 				<li id="li-tasks"><a href="/groups/{$group->id}/tasks">{$lang.tasks}</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
+				{if $is_group_manager}
 				<li class="dropdown">
 					<a href="javascript:" class="dropdown-toggle" data-toggle="dropdown">
 						<span class="glyphicon glyphicon-menu-hamburger"></span> 管理
@@ -30,7 +31,7 @@
 						<li><a href="javascript:" onclick="delete_group();"><span class="glyphicon glyphicon-trash"></span> 删除班级</a></li>
 					</ul>
 				</li>
-
+				{/if}
 				<li><a class="" href="/"><span class="glyphicon glyphicon-home"></span> {$lang.back_to_home}</a></li>
 			</ul>
 		</div>
